Adding JFormattedTextField and JSpinner to Component Palette.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -822,7 +822,9 @@ Palette/Swing/javax-swing-JPopupMenu.instance=JPopupMenu
 Palette/Swing2/javax-swing-JSlider.instance=JSlider
 Palette/Swing2/javax-swing-JProgressBar.instance=JProgressBar
 Palette/Swing2/javax-swing-JSplitPane.instance=JSplitPane
+Palette/Swing2/javax-swing-JFormattedTextField.instance=JFormattedTextField
 Palette/Swing2/javax-swing-JPasswordField.instance=JPasswordField
+Palette/Swing2/javax-swing-JSpinner.instance=JSpinner
 Palette/Swing2/javax-swing-JSeparator.instance=JSeparator
 Palette/Swing2/javax-swing-JTextPane.instance=JTextPane
 Palette/Swing2/javax-swing-JEditorPane.instance=JEditorPane
