--- a/usersguide/src/org/netbeans/modules/usersguide/Bundle.properties
+++ b/usersguide/src/org/netbeans/modules/usersguide/Bundle.properties
@@ -21,6 +21,8 @@ Menu/Help/org-netbeans-modules-usersguide-master.xml=&Contents
 Actions/Help/org-netbeans-modules-usersguide-mainpage.xml=Core IDE Help
 # #14403:
 Mount/org-netbeans-modules-usersguide-sampledir.settings=Sample Directory Mount
+Mount/org-netbeans-modules-usersguide-timerbean.settings=TimerBean JAR
+Palette/Beans/org-netbeans-examples-lib-timerbean-Timer.instance=Timer
 
 # manifest (#15584):
 OpenIDE-Module-Name=General Online Help
