Initial XML document wizard drop.

--- a/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
@@ -15,14 +15,18 @@ OpenIDE-Module-Display-Category=XML
 OpenIDE-Module-Short-Description=The module is a base for all XML related modules.
 OpenIDE-Module-Long-Description=The module is a base for all XML related modules. It recognizes XML and DTD documents, which can be opened in text editor. It supports parsing of those documents into TAX (Tree API for XML) representation. It supports synchronization among document representations. It also holds all settings shared among all XML related modules.
 
-## Templates
+## mf-layer.xml
 Templates/XML=XML and DTD
 Templates/XML/emptyDTD.dtd=DTD Entity
+Templates/XML/XMLWizard.xml=XML Document Wizard
 Templates/XML/XMLwithROOT.xml=XML Document
 Templates/XML/XMLwithDTD.xml=XML With DTD
 Templates/XML/xhtml.xml=XHTML Document
 Templates/XML/StyleSheet.xml=Extensible Style Sheet
 
-## JavaHelp
+# JavaHelp
 Menu/Help/HelpShortcuts/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Support
 Actions/Help/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Support
+
+# File Types
+Services/MIMEResolver/XMLSchema.xml=XML Schemas
