--- a/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
@@ -30,3 +30,4 @@ Actions/Help/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Support
 
 # File Types
 Services/MIMEResolver/XMLSchema.xml=XML Schemas
+Services/MIMEResolver/xslt-mime-resolver.xml=Extensible Stylesheet Language (XSLT)
