--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -70,7 +70,7 @@ Microsystems, Inc. All Rights Reserved.
             </classpath>
         </javac>
 
-        <for-each locations="compat"/>
+        <for-each locations="xalan, jaxp, compat"/>
     </target>
 
     <target name="jars" depends="init,compile">
@@ -85,6 +85,7 @@ Microsystems, Inc. All Rights Reserved.
             <locale name="ja"/>
         </locjar>    
 
+        <for-each locations="xalan, jaxp"/>
         <for-each locations="../compat"/>
         <copy todir="netbeans">
             <fileset dir="../compat/netbeans"/>
@@ -92,6 +93,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="release">
+        <for-each locations="xalan, jaxp"/>
     </target>
 
     <target name="javahelp">
@@ -116,6 +118,8 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="netbeans"/>
         </copy>
         <genlist targetname="nbm" outputfiledir="${nbext_root}/netbeans"/>
+
+        <for-each locations="xalan, jaxp"/>
     </target>
 
     
@@ -141,6 +145,8 @@ Microsystems, Inc. All Rights Reserved.
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
+
+        <for-each locations="xalan, jaxp"/>
     </target>
 
     <target name="clean">
@@ -155,7 +161,7 @@ Microsystems, Inc. All Rights Reserved.
         <delete dir="Info"/>
         <delete dir="javahelp/org/netbeans/modules/xml/core/docs/JavaHelpSearch"/>
 
-        <for-each locations="compat"/>
+        <for-each locations="xalan, jaxp, compat"/>
         <for-each locations="../compat"/>
     </target>
 
