--- a/xml.tools/src/org/netbeans/modules/xml/tools/actions/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/actions/Bundle.properties
@@ -39,6 +39,7 @@ MSG_parser_err_1=Cannot instantiate any JAXP parser.
 # {0} location of plugged parser
 MSG_parser_plug=Using JAXP parser at {0}.
 MSG_parser_no_schema=Warning: Parser does not support XML Schema based validation, it requires DOCTYPE!
+MSG_parser_no_schema_loc=Warning: Parser does not support specifing XML Schema location.
 # 0=PublicID, 1=system ID
 MSG_resolver_1=Note: Cannot resolve {0} defaulting to {1}.
 # 0=PublicID, 1=system ID
