--- a/xml.text/src/org/netbeans/modules/xml/text/syntax/Bundle.properties
+++ b/xml.text/src/org/netbeans/modules/xml/text/syntax/Bundle.properties
@@ -12,6 +12,7 @@
 
 ## XMLOptions.java
 OPTIONS_xml=XML Editor
+MSG_NegativeValue=Negative value is not allowed
 
 ## DTDOptions.java
 OPTIONS_dtd=DTD Editor
