Show browser in JDialog when modal window is displayed (#17930)

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -359,6 +359,9 @@ ACSD_ExplorerPropertySheetView=Right part of Customizer dialog with tree view
 
 CTL_ToggleProperties=Toggle Property Sheet
 
+# name of help window for dialogs
+CTL_Help=Help
+
 # Menus
 
 CTL_newMenuName=Menu
