Adding a feature - case insensitive code completion

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -51,6 +51,9 @@ HINT_coloringMap=Fonts and colors for various elements displayed in the Source E
 PROP_completionAutoPopup=Auto Popup Completion Window
 HINT_completionAutoPopup=If True, the completion window automatically appears when appropriate.
 
+PROP_completionCaseSensitive=Case Sensitive Code Completion
+HINT_completionCaseSensitive=If True, the completion query search will be case sensitive
+
 PROP_completionAutoPopupDelay=Delay of Completion Window Auto Popup
 HINT_completionAutoPopupDelay=How long to wait (in milliseconds) before automatically popping up the completion window.
 
