Related to bug # 21999: explicitly report when an non-empty is used (default instance contains some components).

--- a/form/src/org/netbeans/modules/form/layoutsupport/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/layoutsupport/Bundle.properties
@@ -11,6 +11,9 @@
 
 
 
+# LayoutSupportManager
+MSG_ERR_NonEmptyContainer=Cannot initialize layout for non-empty container.\n\
+The default container instance cannot contain any components.
 
 # BorderLayoutSupport
 PROP_direction=Direction
