Fix of bug #21387: RADPaste provides name ("Move" for cut/paste, "Copy" for copy/paste).

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -138,6 +138,10 @@ CTL_SyntheticTabHint=Properties that control the Java code generated for this Ja
 CTL_LayoutTab=Layout
 CTL_LayoutTabHint=Layout constraints properties
 
+# names of PasteType for copy/paste and cut/paste operations
+CTL_CopyPaste=Copy
+CTL_CutPaste=Move
+
 # hint for ButtonGroupProperty
 HINT_ButtonGroup=Group of buttons in which this button belongs
 
