finished Test Suite Wizard

--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -11,8 +11,8 @@
 
 # File names:
 Templates/TestTools=Test Tools
-Templates/TestTools/test=Test Workspace
-Templates/TestTools/qa-functional=Test Type
+Templates/TestTools/MyTestWorkspace.xml=Test Workspace
+Templates/TestTools/qa-functional.group=Test Type
 Templates/TestTools/simpleTest.java=Simple Test Suite
 Templates/TestTools/jemmyTest.java=Jemmy Test Suite
 Templates/TestTools/jellyTest.java=Jelly Test Suite
