--- a/xml.text/build.xml
+++ b/xml.text/build.xml
@@ -65,9 +65,12 @@ Microsystems, Inc. All Rights Reserved.
                 </fileset>
                 <pathelement location="${nbroot}/editor/netbeans/modules/ext/nb-editor.jar"/>
                 <pathelement location="${nbroot}/editor/netbeans/modules/editor.jar"/>
-        	<pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>  <!-- DOM -->
+        	<pathelement location="${binroot}/core/release/lib/ext/dom.jar"/>
+        	<pathelement location="${binroot}/core/release/lib/ext/sax.jar"/>
+        	<pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>  <!-- same as above -->
                 <pathelement location="${tax_lib_root}/src/"/>
                 <pathelement location="${core_root}/src/"/>
+                <pathelement location="../api/src/"/>
             </classpath>
         </javac>
 
