--- a/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
+++ b/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
@@ -49,7 +49,8 @@ PROP_ClasspathBase=Base Class Path URL
 HINT_ClasspathBase=Starting URL for the Java class path and resources hierarchy.
 # PROP_Granted=Grant Access To
 # HINT_Granted=IP addresses to which access to the server is granted (comma separated list).
-
+PROP_showGrantAccess=Show Grant Access Dialog
+HINT_showGrantAccess=If True user is asked to allow access from hosts without granted access. If False access is automatically denied.
 
 # NbBaseServlet.class
 MSG_HTTP_FORBIDDEN=You are not authorized to view this page.
@@ -63,7 +64,7 @@ CTL_ServerStarted=Internal HTTP server running on port {0,number,####}
 CTL_ServerStopped=Internal HTTP server stopped
               
 # HttpServerSettings.class              
-MSG_AddAddress=In order to perform this action, access to the internal web server\nfrom address {0} needs to be enabled.\nDo you wish to enable access from this address?
+MSG_AddAddress=In order to perform this action, access to the internal web server from address {0} needs to be enabled. Do you wish to enable access from this address?
 
 MSG_ClassPathServletDescr=Servlet for handling IDE system class path requests
 MSG_BaseServletDescr=Base servlet for servlets which access IDE Open APIs
@@ -100,5 +101,21 @@ ACS_HostLabelA11yDesc=Host selection.
 ACS_AnyRadioButtonA11yDesc=Select this option to use any host.
 ACS_SelectedRadioButtonA11yDesc=Select this option to use selected hosts.
 
+#GrantAccessPanel.class
+CTL_GrantAccessTitle=Grant Access Request
+CTL_DNSTDNT_Mnemonic=D
+CTL_DNSTDNT=\ Do Not Show This Dialog Next Time
+ACSD_CTL_DNSTDNT=\ Do Not Show This Dialog Next Time
+
 #filenames
+Menu/Tools/HttpServer=Internal HTTP Server
 Services/org-netbeans-modules-httpserver-HttpServerSettings.settings=HTTP Server
+
+
+# Actions API
+LBL_StartHttpServerAction=Start HTTP Server
+LBL_StopHttpServerAction=Stop HTTP Server
+HINT_StartHttpServerAction=Starts internal HTTP Server.
+HINT_StopHttpServerAction=Stops internal HTTP Server.
+MSG_ServerAlreadyRunning=Internal HTTP server is already running.
+MSG_ServerAlreadyStopped=Internal HTTP server is not running.
