--- a/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
@@ -23,6 +23,7 @@ Templates/XML/XMLwithROOT.xml=XML Document
 Templates/XML/XMLwithDTD.xml=XML With DTD
 Templates/XML/xhtml.xml=XHTML Document
 Templates/XML/StyleSheet.xml=Extensible Style Sheet
+Templates/XML/xml_entity.ent=XML Parsed Entity
 
 # JavaHelp
 Menu/Help/HelpShortcuts/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Support
