added wizard panel and templates descriptors implemented wizard iterators updated mf-layer.xml

--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -12,7 +12,7 @@
 # File names:
 Templates/TestTools=Test Tools
 Templates/TestTools/MyTestWorkspace.xml=Test Workspace
-Templates/TestTools/qa-functional.group=Test Type
+Templates/TestTools/qa-functional.group=Functional Test Type
 Templates/TestTools/simpleTest.java=Simple Test Suite
 Templates/TestTools/jemmyTest.java=Jemmy Test Suite
 Templates/TestTools/jellyTest.java=Jelly Test Suite
