OK made the default button, close the component finally on OK and Cancel.

--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
@@ -21,7 +21,7 @@ MergePanel.acceptAndNextLeftButton=Accept & Next
 MergePanel.acceptRightButton.text=Accept
 MergePanel.acceptAndNextRightButton=Accept & Next
 
-BTN_OK=null
+BTN_OK=OK
 
 BTN_Cancel=Cancel
 
