#22482: I18N - I18N for messages with mnemonic is not correct. CustomTableModelEditor reuses bundle entries as label texts for multiple buttons which have the same label but different mnemonics.  This causes troubles for Japanese localizers because the convention in Japan is to append the mnemonic to the end of the label "Like This (&T)"

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -87,30 +87,42 @@ CTL_DefaultTableValues=Default Table Values:
 CTL_DefaultTableValues_Mnemonic=V
 ACSD_CTL_DefaultTableValues=N/A
 CTL_DefaultValues=Default Values
-CTL_Insert=Insert
+
+CTL_InsertRow=Insert
 CTL_InsertRow_Mnemonic=I
+CTL_HINT_InsertRow=Insert one row at selected position.
+
+CTL_InsertColumn=Insert
 CTL_InsertColumn_Mnemonic=n
 CTL_HINT_InsertColumn=Insert one column at selected position.
-CTL_HINT_InsertRow=Insert one row at selected position.
-CTL_Delete=Delete
+
+CTL_DeleteRow=Delete
 CTL_DeleteRow_Mnemonic=e
+CTL_HINT_DeleteRow=Delete selected row.
+
+CTL_DeleteColumn=Delete
 CTL_DeleteColumn_Mnemonic=l
 CTL_HINT_DeleteColumn=Delete selected column.
-CTL_HINT_DeleteRow=Delete selected row.
+
 CTL_MoveRowUp=Move Up
 CTL_MoveRowUp_Mnemonic=U
-CTL_HINT_MoveColumnUp=Change position of selected column (move up)
 CTL_HINT_MoveRowUp=Change position of selected row (move up)
+CTL_HINT_MoveColumnUp=Change position of selected column (move up)
+
+
 CTL_MoveRowDown=Move Down
 CTL_MoveRowDown_Mnemonic=w
-CTL_HINT_MoveColumnDown=Change position of selected column (move down)
 CTL_HINT_MoveRowDown=Change position of selected row (move down)
+CTL_HINT_MoveColumnDown=Change position of selected column (move down)
+
 CTL_MoveColumnLeft=Move Left
 CTL_MoveColumnLeft_Mnemonic=f
 CTL_HINT_MoveColumnLeft=Change position of selected column (move left)
+
 CTL_MoveColumnRight=Move Right
 CTL_MoveColumnRight_Mnemonic=g
 CTL_HINT_MoveColumnRight=Change position of selected column (move right)
+
 CTL_CountPlus=+
 CTL_CountPlusRow_Mnemonic=,
 CTL_CountPlusColumn_Mnemonic=[
@@ -288,7 +300,6 @@ ACSD_ServiceTypePanel=N/A
 CTL_Error_description_name=Regular Expression for Error
 CTL_Add=Add
 CTL_Add_tip=Add current settings as a new preset.
-CTL_Remove=Remove
 CTL_Remove_tip=Remove selected error description from the preset list.
 CTL_Set=Change
 CTL_Set_tip=Change the selected preset.
