#21418: support for accessibility

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -128,15 +128,22 @@ CTL_ValueNotSet=<Not Set>
 
 # RADComponent PropertySets
 CTL_PropertiesTab=Properties
-CTL_PropertiesTabHint=Common properties of this JavaBean
+CTL_PropertiesTabHint=Common properties of the JavaBean
 CTL_Properties2Tab=Other Properties
-CTL_Properties2TabHint=Other properties of this JavaBean
+CTL_Properties2TabHint=Other properties of the JavaBean
 CTL_EventsTab=Events
-CTL_EventsTabHint=Events of this JavaBean
+CTL_EventsTabHint=Events of the JavaBean
 CTL_SyntheticTab=Code Generation
-CTL_SyntheticTabHint=Properties that control the Java code generated for this JavaBean
+CTL_SyntheticTabHint=Properties that control the Java code generated for the JavaBean
 CTL_LayoutTab=Layout
 CTL_LayoutTabHint=Layout constraints properties
+
+# Accessibility support
+CTL_AccessibilityTab=Accessibility
+CTL_AccessibilityTabHint=Properties of AccessibleContext of the component
+PROP_AccessibleName=Accessible Name
+PROP_AccessibleDescription=Accessible Description
+PROP_AccessibleParent=Accessible Parent
 
 # names of PasteType for copy/paste and cut/paste operations
 CTL_CopyPaste=Copy
@@ -677,6 +684,7 @@ FMT_MSG_RESIZING_FORMDESIGNER=Resizing FormDesigner to size {0}, {1}.
 
 #ComponentChooserEditor
 CTL_NoComponent=<none>
+CTL_InvalidReference=<Invalid Reference>
 
 #EventCustomEditor
 CTL_EE_ADD=Add...
