--- a/xml.core/build.xml
+++ b/xml.core/build.xml
@@ -52,11 +52,11 @@ Microsystems, Inc. All Rights Reserved.
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     </target>
 
-    <target name="tax.compile">
+<!--    <target name="tax.compile">
         <ant dir="${tax_root}" target="compile"/>
-    </target>
+    </target>-->
 
-    <target name="compile" depends="tax.compile">
+    <target name="compile"><!-- depends="tax.compile">-->
         <echo message="Compiling XML core module classes..."/>
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
