--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -54,11 +54,11 @@ Microsystems, Inc. All Rights Reserved.
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     </target>
 
-    <target name="xml-core.compile">
+<!--    <target name="xml-core.compile">
         <ant dir="${core_root}" target="compile"/>
-    </target>
+    </target>-->
 
-    <target name="compile" depends="xml-core.compile">
+    <target name="compile"><!-- depends="xml-core.compile">-->
         <echo message="Compiling XML tools module classes..."/>
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
