--- a/openide/build.xml
+++ b/openide/build.xml
@@ -679,7 +679,9 @@ Included in JDK 1.3, else you may need to download it separately."/>
          manifest="api/examples/org/netbeans/examples/modules/minicomposer.mf"
 	 basedir="api/examples"
 	 includes="org/netbeans/examples/modules/minicomposer/"
-	 compress="false"/>
+	 compress="false">
+      <exclude name="**/*.java"/>
+    </jar>
   </target>
   <target name="example-minicomposer-test" depends="example-minicomposer-test-build" description="Try installing minicomposer into running IDE.">
     <nbinstaller action="reinstall" module="examplemodulereload/minicomposer-test/minicomposer.jar"/>
